[package]
name = "texas"
version = "1.0.0"
edition = "2021"
default-run = "texas"

[features]
docker = []
openapi = []
local = []

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "macros"] }
derivative = "2"
dotenv = { version = "0.15", features = ["clap"] }
jsonwebkey = { version = "0.3", features = ["jwt-convert"] }
jsonwebtoken = "8"
log = { version = "0.4", features = ["std"] }
moka = { version = "0.12", features = ["future"] }
opentelemetry = { version = "0.29", features = ["metrics", "trace"] }
opentelemetry-http = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["metrics", "trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.29", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.29", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-tracing = {  version = "0.5", features = ["opentelemetry_0_29"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1", features = [] }
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "openapi_extensions"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1", features = ["v4"] }
strum_macros = "0.27"

[dev-dependencies]
env_logger = "0.11"
jsonwebkey = { version = "0.3", features = ["jwt-convert", "generate"] }
testcontainers = { version = "0.24", features = ["http_wait", "properties-config"] }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }

[[bin]]
name = "gen-openapi"
path = "./src/export_openapi_spec.rs"
