[package]
name = "texas"
description = "Texas implements OAuth token fetch, exchange, and validation, so that you don't have to"
default-run = "texas"
edition = "2024"
license = "MIT"
repository = "https://github.com/nais/texas"
version = "1.0.0"

[features]
docker = []
openapi = []
local = []

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "macros"] }
derivative = "2"
dotenv = { version = "0.15" }
jsonwebkey = { version = "0.4", features = ["jwt-convert"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] } # jsonwebkey requires rust_crypto
log = { version = "0.4", features = ["std"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "http2", "charset", "form", "query"] }
reqwest-middleware = { version = "0.5", features = ["rustls", "json", "http2", "charset", "form", "query"] }
reqwest-retry = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
utoipa = { version = "5", features = ["axum_extras", "openapi_extensions"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1", features = ["v4"] }
strum_macros = "0.27"

# otel/tracing related dependencies
json-subscriber = { version = "0.2.6", features = ["tracing-opentelemetry-0-31"] }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] } # version must match reqwest-tracing feature
opentelemetry-http = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["metrics", "trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.31", features = ["trace"] }
tracing = { version = "0.1", features = [] }
tracing-opentelemetry = "0.32" # version must match json-subscriber feature
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest-tracing = { version = "0.6", features = ["opentelemetry_0_30"] }

[dev-dependencies]
jsonwebkey = { version = "0.4", features = ["jwt-convert", "generate"] }
mock_instant = "0.6"
pretty_assertions = "1"
rstest = "0.26"
serde_urlencoded = "0.7.1"
test-log = { version = "0.2", features = ["trace"] }
testcontainers = { version = "0.26", features = ["http_wait", "properties-config"] }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }

[[bin]]
name = "gen-openapi"
path = "src/bin/openapi.rs"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
strip = true
opt-level = "z"
